--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "prudywsh",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.4",
+    "dotenv": "^4.0.0",
     "express": "^4.15.4"
   }
 }
