--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "dependencies": {
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
-    "express": "^4.15.4"
+    "express": "^4.15.4",
+    "request": "^2.81.0",
+    "simple-oauth2": "^1.3.0",
+    "url": "^0.11.0"
   }
 }
