--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "prudywsh",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.0",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
