ORM installed + rest route for Event creation

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
-CLIENT_ID=
-CLIENT_SECRET=
+ETU_UTT_CLIENT_ID=
+ETU_UTT_CLIENT_SECRET=
+ETU_UTT_BASEURI=
+ETU_UTT_SCOPES=
+
+DB_HOST=
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
