--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -17,8 +17,13 @@
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
+    "lodash": "^4.17.4",
+    "mongoose": "^4.11.11",
     "request": "^2.81.0",
     "simple-oauth2": "^1.3.0",
     "url": "^0.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.0"
   }
 }
