--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
+    "fs.extra": "^1.3.2",
     "lodash": "^4.17.4",
     "mongoose": "^4.11.11",
+    "multer": "^1.3.0",
     "request": "^2.81.0",
     "simple-oauth2": "^1.3.0",
     "url": "^0.11.0"
