--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
     "fs.extra": "^1.3.2",
+    "jsonwebtoken": "^8.0.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.11.11",
     "multer": "^1.3.0",
