--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "body-parser": "^1.18.1",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
+    "email-templates": "^3.5.2",
     "express": "^4.15.4",
     "fs.extra": "^1.3.2",
     "jsonwebtoken": "^8.0.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.11.11",
     "multer": "^1.3.0",
+    "pug": "^2.0.3",
     "request": "^2.81.0",
     "simple-oauth2": "^1.3.0",
     "url": "^0.11.0"
