use nodemailer instead of email-teamplates to send email

--- a/.env.example
+++ b/.env.example
@@ -12,4 +12,8 @@ UPLOAD_PATH=./temp/uploads
 
 SECRET=
 
-EMAIL_SENDER=
+EMAIL_SOCKS=
+EMAIL_USERNAME=
+EMAIL_PASSWORD=
+EMAIL_HOSTNAME=
+EMAIL_PORT=
