--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "body-parser": "^1.18.1",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
+    "ejs": "^2.5.8",
+    "email-templates": "^3.5.2",
     "express": "^4.15.4",
     "fs.extra": "^1.3.2",
     "jsonwebtoken": "^8.0.1",
@@ -24,6 +26,7 @@
     "mongoose": "^4.11.11",
     "multer": "^1.3.0",
     "nodemailer": "^4.6.3",
+    "pug": "^2.0.3",
     "request": "^2.81.0",
     "simple-oauth2": "^1.3.0",
     "url": "^0.11.0"
