mail config updated for smtp instead of smtps

--- a/.env.example
+++ b/.env.example
@@ -12,10 +12,9 @@ UPLOAD_PATH=./temp/uploads
 
 SECRET=
 
+DEFAULT_ADMIN=
+
 EMAIL_SENDER=
-EMAIL_SOCKS=
-EMAIL_USERNAME=
-EMAIL_PASSWORD=
 EMAIL_HOSTNAME=
 EMAIL_PORT=
 
